@@ -2,6 +2,7 @@ package it.unibo.aurea.model;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import it.unibo.aurea.model.api.Card;
 import it.unibo.aurea.model.api.CharacterType;
@@ -15,13 +16,13 @@ public class Deck {
     private List<Card> deck = new ArrayList<>();
 
     public Deck() {
-        this.createStudentCards();
-        this.createProfessorCards();
-        this.createMumCards();
-        this.createBusinessManCards();
+        this.makeStudentCards();
+        this.makeProfessorCards();
+        this.makeMumCards();
+        this.makeBusinessmanCards();
     }
 
-    private void createProfessorCards() {
+    private void makeProfessorCards() {
         this.deck.add(new CardImpl(CharacterType.PROFESSOR,
         "Rector, the faculty is requesting funding for a new research initiative. Will the university support it?",
         new Decision("No, the budget is too tight", 
@@ -32,7 +33,7 @@ public class Deck {
                 new EffectImpl(ParameterType.FINANCES, -7))));
     }
 
-    private void createMumCards() {
+    private void makeMumCards() {
         this.deck.add(new CardImpl(CharacterType.MUM,
         "Rector, many families care about the university's public image. Would you invest in a campaign to improve the institution's reputation?",
         new Decision("No, that would be unnecessary spending", 
@@ -43,7 +44,7 @@ public class Deck {
                 new EffectImpl(ParameterType.FINANCES, -7))));
     }
 
-    private void createBusinessManCards() {
+    private void makeBusinessmanCards() {
         this.deck.add(new CardImpl(CharacterType.BUSINESSMAN,
         "Rector, my company would like to sponsor a new technology lab for the university. Would you accept our investment?",
         new Decision("No, we prefer to remain independent", 
@@ -54,7 +55,7 @@ public class Deck {
                 new EffectImpl(ParameterType.REPUTATION, 3))));
     }
 
-    private void createStudentCards() {
+    private void makeStudentCards() {
         this.deck.add(new CardImpl(CharacterType.STUDENT,
         "Rector, would you consider funding a large student festival on campus to improve student life and strengthen our community?",
         new Decision("No, we can't", 
@@ -76,14 +77,43 @@ public class Deck {
     }
 
     /**
-     * It filters the deck returning the cards associated with a character.
+     * It filters an input list returning the cards associated with a character.
      * 
+     * @param input the list to filter
      * @param character the term of comparison
      * @return a {@code List} of cards matched with the input {@code CharacterType}
      */
-    public List<Card> getByCharacter(CharacterType character) {
-        return this.deck.stream()
-            .filter(c -> c.getCharacter()
-            .equals(character)).toList();
+    public List<Card> getByCharacter(List<Card> input, CharacterType character) {
+        return input.stream()
+            .filter(c -> c.getCharacter().equals(character))
+            .collect(Collectors.toList());
+    }
+
+    /**
+     * It filters an input list returning the cards that modify a parameter.
+     * 
+     * @param input the list to filter
+     * @param parameter the term of comparison
+     * @return a {@code List} of cards with an effect on the input {@code ParameterType}
+     */
+    public List<Card> getByParameter(List<Card> input, ParameterType parameter) {
+        return input.stream()
+            .filter(c -> c.getAllEffects().stream()
+            .anyMatch(e -> e.getParameter().equals(parameter)))
+            .collect(Collectors.toList());
+    }
+
+    /**
+     * It filters an input list returning the cards containing a specific delta.
+     * 
+     * @param input the list to filter
+     * @param delta the term of comparison
+     * @return a {@code List} of cards with an {@code int} of how a parameter change
+     */
+    public List<Card> getByDelta(List<Card> input, int delta) {
+        return input.stream()
+            .filter(c -> c.getAllEffects().stream()
+            .anyMatch(e -> e.getDelta() == delta))
+            .collect(Collectors.toList());
     }
 }
